# glm-factor-optimizer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: index.md  llm-quickstart.md  llms-full.txt  llms.txt  sitemap.md
docs/explanation/: architecture.md  modeling_principles.md
docs/how-to/: rank_candidate_factors.md  refine_factors.md  run_automatic_workflow.md  save_and_audit.md  test_interactions.md
docs/reference/: api.md  specs.md  validation_outputs.md
docs/tutorials/: notebook_study_workflow.md
examples/: data.py  run_binning_optimization.py  run_frequency_model.py  run_gamma_severity_model.py  run_manual_count_rate_model.py  run_spark_backend.py
glm_factor_optimizer/: __init__.py  _backend.py  aggregation.py  bins.py  core.py  diagnostics.py  factor.py  metrics.py  model.py  optimize.py  penalties.py  runs.py  sampling.py  screening.py  split.py  study.py  validation.py  workflow.py
glm_factor_optimizer/spark/: __init__.py  _deps.py  aggregation.py  auto.py  bins.py  core.py  diagnostics.py  factor.py  metrics.py  model.py  optimize.py  screening.py  split.py  study.py  validation.py  workflow.py
rate_glm_optimizer/: __init__.py  bins.py  core.py  diagnostics.py  metrics.py  model.py  optimize.py  runs.py  screening.py  split.py  study.py  validation.py
rate_glm_optimizer/spark/: __init__.py  _deps.py  aggregation.py  metrics.py  split.py
scripts/: dbx_smoke.py
tests/: test_api.py  test_binning.py  test_docs.py  test_helpers.py  test_metrics.py  test_optimize.py  test_screening.py  test_spark_backend.py  test_split.py  test_study.py  test_workflow.py
