[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "glm-factor-optimizer"
version = "0.1.0"
description = "Domain-free GLM factor binning, grouping, and model design tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "GLM Factor Optimizer contributors" }
]
dependencies = [
  "numpy>=1.23",
  "optuna>=3.0",
  "pandas>=1.5",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
spark = ["pyspark>=3.5"]
dev = ["pytest>=8.0", "hatchling>=1.21"]

[tool.hatch.build.targets.wheel]
packages = ["glm_factor_optimizer"]
