[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "glm-factor-optimizer"
version = "0.1.2"
description = "Tools for auditable GLM factor design: numeric binning, categorical grouping, factor ranking, validation, and audit specs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = [
  "generalized linear model",
  "numeric binning",
  "categorical grouping",
  "factor screening",
  "auditable GLM",
  "exposure model",
  "Poisson frequency GLM",
  "Gamma severity GLM",
  "rating factors",
  "risk factors",
  "credit risk",
  "banking analytics",
  "operational analytics",
  "insurance pricing",
  "actuarial pricing",
  "claim frequency",
  "claim severity",
]
authors = [
  { name = "GLM Factor Optimizer contributors" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.23",
  "optuna>=3.0",
  "pandas>=1.5",
  "statsmodels>=0.14"
]

[project.urls]
Homepage = "https://github.com/csabar/glm-factor-optimizer"
Repository = "https://github.com/csabar/glm-factor-optimizer"
Documentation = "https://csabar.github.io/glm-factor-optimizer/"
Changelog = "https://github.com/csabar/glm-factor-optimizer/blob/main/CHANGELOG.md"
Issues = "https://github.com/csabar/glm-factor-optimizer/issues"

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
spark = ["pyspark>=3.5"]
docs = ["mkdocs>=1.6"]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "hatchling>=1.21",
  "mkdocs>=1.6",
  "pytest>=8.0",
  "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["glm_factor_optimizer"]

[tool.coverage.run]
branch = true
source = ["glm_factor_optimizer"]
omit = ["glm_factor_optimizer/spark/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
